tests/compile_fail/repeated_file.stderr
error: The `short` attribute with value `n` is repeated with another field.
  --> $DIR/repeated_file.rs:10:9
   |
10 |     pub name2: bool,
   |         ^^^^^
